--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,90 +3,47 @@
 {% block body %}
 <div class="container">
     <section class="top-posts">
+        {% set main_post = posts.getOneFromTop %}
         <article class="main-post top-post">
-            <a href="#" class="category-link">World</a>
+            <a href="#" class="category-link">{{ main_post.category }}</a>
             <a href="#">
-                <img src="img/default.png" alt="" class="img-fluid">
+                <img src="{{ main_post.image }}" alt="" class="img-fluid">
             </a>
             <a href="#" class="post-link">
-                <h1>Lorem ipsum dolor</h1>
+                <h1>{{ main_post.title }}</h1>
             </a>
-            <time>1 minute ago</time>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, harum.</p>
+            <time>{{ main_post.publicationDate | date('Y-m-d H:i:s') }}</time>
+            <p>{{ main_post.shortDescription }}</p>
             <div class="clearfix"></div>
         </article>
         <div class="row posts">
             <div class="col"></div>
+        {% for post in posts.getFromTop(3) %}
             <div class="col-3">
                 <article class="post top-post">
-                    <a href="#" class="category-link">World</a>
+                    <a href="#" class="category-link">{{ post.category }}</a>
                     <a href="#">
-                        <img src="img/default.png" alt="" class="img-fluid">
+                        <img src="{{ post.image }}" alt="" class="img-fluid">
                     </a>
                     <a href="#" class="post-link">
-                        <h3>Lorem ipsum dolor</h3>
+                        <h3>{{ post.title }}</h3>
                     </a>
-                    <time>5 minutes ago</time>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, harum.</p>
+                    <time>{{ post.publicationDate | date('Y-m-d H:i:s') }}</time>
+                    <p>{{ post.shortDescription }}</p>
                 </article>
             </div>
-            <div class="col-3">
-                <article class="post top-post">
-                    <a href="#" class="category-link">Science</a>
-                    <a href="#">
-                        <img src="img/default.png" alt="" class="img-fluid">
-                    </a>
-                    <a href="#" class="post-link">
-                        <h3>Lorem ipsum dolor</h3>
-                    </a>
-
-                    <time>6 minutes ago</time>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, harum.</p>
-                </article>
-            </div>
-            <div class="col-3">
-                <article class="post top-post">
-                    <a href="#" class="category-link">IT</a>
-                    <a href="#">
-                        <img src="img/default.png" alt="" class="img-fluid">
-                    </a>
-                    <a href="#" class="post-link">
-                        <h3>Lorem ipsum dolor</h3>
-                    </a>
-
-                    <time>7 minutes ago</time>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, harum.</p>
-                </article>
-            </div>
+        {% endfor %}
             <div class="col"></div>
         </div>
     </section>
     <section class="regular-posts">
+    {% for post in posts %}
         <article class="post">
-            <a href="#" class="category-link">World</a>
-            <a href="#"><h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4></a>
-            <time>24 minutes ago</time>
+            <a href="#" class="category-link">{{ post.category }}</a>
+            <a href="#"><h4>{{ post.title }}</h4></a>
+            <time>{{ post.publicationDate | date('Y-m-d H:i:s') }}</time>
         </article>
-        <article class="post">
-            <a href="#" class="category-link">World</a>
-            <a href="#"><h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4></a>
-            <time>24 minutes ago</time>
-        </article>
-        <article class="post">
-            <a href="#" class="category-link">World</a>
-            <a href="#"><h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4></a>
-            <time>24 minutes ago</time>
-        </article>
-        <article class="post">
-            <a href="#" class="category-link">World</a>
-            <a href="#"><h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4></a>
-            <time>24 minutes ago</time>
-        </article>
-        <article class="post">
-            <a href="#" class="category-link">World</a>
-            <a href="#"><h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4></a>
-            <time>24 minutes ago</time>
-        </article>
+    {% endfor %}
     </section>
 </div>
 {% endblock %}
